# ComfyUI-I2VGenXL

./: I2VGenXL.py  README.md  __init__.py  pyproject.toml
I2VGENXL WORKFLOWS/: I2VGENXL_Simple【Zho】.json  I2VGENXL_Standard【Zho】.json
